--- a/internal/generator/templates/bitsizeof.go.tmpl
+++ b/internal/generator/templates/bitsizeof.go.tmpl
@@ -1,27 +1,35 @@
-{{ $scope := .pkg }}
-{{ $field := .field }}
-{{ $native := goNativeType $scope $field.Type }} 
+{{- $scope := .pkg }}
+{{- $field := .field }}
+{{- $native := goNativeType $scope $field.Type }}
+{{- $name := printf "v.%s" $field.Name }}
+{{- if $field.IsOptional}}
+    {{- $name = printf "(*v.%s)" $field.Name }}
+{{- end }}
+{{- if and $native.RequiresCast (not $field.Array) }}
+    {{- if $native.IsMarshaler }}
+        {{- $name = printf "(*%s)(&v.%s)" (goType $scope $native.Type) $field.Name }}
+        {{- if $field.IsOptional}}
+            {{- $name = printf "(*%s)(v.%s)" (goType $scope $native.Type) $field.Name }}
+        {{- end }}
+    {{- else }}
+        {{- $name = printf "%s(%s)" (goType $scope $native.Type) $name }}
+    {{- end }}
+{{- end }}
+
+{{- if $field.OptionalClause }}
+    if {{ goExpression $scope $field.OptionalClause }} {
+{{- end }}
+{{- if not (eq $field.Alignment 0) }}
+    endBitPosition += ztype.CountAlignBits(endBitPosition, {{ $field.Alignment }})
+{{- end }}
 {{if $field.IsOptional}}
     endBitPosition += 1
     if v.{{ $field.Name }} != nil {
-{{- if $native.Type.IsBuiltin}}
-        endBitPosition += {{- template "builtin_bitsizeof.go.tmpl" dict "pkg" $scope "field" $field "native" $native }}
-{{- else}}
-        delta, err := v.{{ $field.Name }}.ZserioBitSize(endBitPosition)
-        if err != nil {
-            return 0, err
-        }
-        endBitPosition += delta
-{{- end}}
+    {{- template "builtin_bitsizeof.go.tmpl" dict "pkg" $scope "name" $name "native" $native "isarray" $field.Array }}
     }
 {{- else}}
-{{- if $native.Type.IsBuiltin}}
-    endBitPosition += {{- template "builtin_bitsizeof.go.tmpl" dict "pkg" $scope "field" $field "native" $native }}
-{{- else}}
-    delta, err := v.{{ $field.Name }}.ZserioBitSize(endBitPosition)
-    if err != nil {
-        return 0, err
+    {{- template "builtin_bitsizeof.go.tmpl" dict "pkg" $scope "name" $name "native" $native "isarray" $field.Array }}
+{{- end}}
+{{- if $field.OptionalClause }}
     }
-    endBitPosition += delta
-{{- end}}
-{{- end}}
+{{- end }}
