Refactor the Object and Packed Object Array Traits
- The current method if object array traits (using two template parameters)
  doesn't work: it fails when an array of the object type is instantiated
  inside the object, for example:

struct A {
   array ztype.Array[*A, ztype.ObjectArrayTraits[A, *A]]
}

  This will not compile because of the non-pointer access to A inside the
  array traits. Therefore, this approach was scrapped.
- The approach with the two template parameter was chosen to be able to
  instantiate an array element during array decoding. Therefore, a new
  way of instantiation new array elements must be found.
- A factory function, e.g. NewLaneCenterLine() would be nice, but doesn't
  work with generic names.
- The solution was to implement a Clone() function for each zserio object,
  which creates a copy of the default value object within the array.

--- a/internal/generator/templates/array_init.go.tmpl
+++ b/internal/generator/templates/array_init.go.tmpl
@@ -1,6 +1,8 @@
 {{ $scope := .pkg }}
 {{ $field_name := .field_name }}
 {{ $array := .array }}
+{{ $type := .type }}
+{{- $traits := goArrayTraits $scope $type }}
 {{- if $array.IsPacked }}
     {{ $field_name }}.IsPacked = true
 {{- end }}
@@ -8,4 +10,7 @@
     {{ $field_name }}.FixedSize = int({{ goExpression $scope $array.Length }})
 {{- else }}
     {{ $field_name }}.IsAuto = true
+{{- end }}
+{{- if eq $traits "ztype.ObjectArrayTraits" }}
+    {{ $field_name }}.ArrayTraits.DefaultObject = new({{ goType $scope $type }})
 {{- end }}
