Initialize Array Traits during Encoding
- Previously, the array traits were not initialized during Marshaling. The
  array traits had to be manually initialized, or initialized by
  Unmarshaling.
- This lead to hard-to-find errors, because the serialization did not
  raise any warnings or errors, if the traits were not initialized.
- This commit changes this behavior, by implicitly initializing the array
  traits with the correct configuration.

--- a/internal/generator/templates/array_init.go.tmpl
+++ b/internal/generator/templates/array_init.go.tmpl
@@ -3,6 +3,8 @@
 {{ $array := .array }}
 {{ $type := .type }}
 {{- $traits := goArrayTraits $scope $type }}
+
+{{- $field_name }}.ArrayTraits = {{ template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "type" $type }}
 {{- if $array.IsPacked }}
     {{ $field_name }}.IsPacked = true
 {{- end }}
