--- a/internal/generator/templates/packing_context_init.go.tmpl
+++ b/internal/generator/templates/packing_context_init.go.tmpl
@@ -32,7 +32,7 @@
         if field{{ $field.Name }}Context, ok := childrenNodes[{{ $index }}].Context.(*ztype.DeltaContext[{{ goType $scope $native.Type }}]); !ok {
             return errors.New("unknown context type")
         } else {
-            field{{ $field.Name }}Context.Init(&{{ template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "native" $native }}, {{ goType $scope $native.Type }}({{ $field_name }}))
+            field{{ $field.Name }}Context.Init(&{{ template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "type" $native.Type }}, {{ goType $scope $native.Type }}({{ $field_name }}))
         }
     {{- end }}
     {{- if $field.OptionalClause }}
