--- a/internal/generator/templates/bitmask.go.tmpl
+++ b/internal/generator/templates/bitmask.go.tmpl
@@ -88,7 +88,7 @@ func (v *{{ $bitmask.Name}}) UnmarshalZserioPacked(contextNode *zserio.PackingCo
   if !ok {
     return errors.New("unsupported packing context type")
   }
-  if tempValue, err := context.Read(&{{- template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "native" $native }}, r); err != nil {
+  if tempValue, err := context.Read(&{{- template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "type" $native.Type }}, r); err != nil {
     return err
   } else {
     (*v) = {{ $bitmask.Name }}(tempValue)
@@ -101,7 +101,7 @@ func (v *{{ $bitmask.Name}}) MarshalZserioPacked(contextNode *zserio.PackingCont
   if !ok {
     return errors.New("unsupported packing context type")
   }
-  return context.Write(&{{- template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "native" $native }}, w, {{ goType $scope $native.Type }}(*v))
+  return context.Write(&{{- template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "type" $native.Type }}, w, {{ goType $scope $native.Type }}(*v))
 }
 
 func (v *{{ $bitmask.Name}}) ZserioInitializeOffsetsPacked(contextNode *zserio.PackingContextNode, bitPosition int) int {
