--- a/internal/generator/templates/enum.go.tmpl
+++ b/internal/generator/templates/enum.go.tmpl
@@ -86,7 +86,7 @@ func (v *{{ $enum.Name}}) ZserioInitPackingContext(contextNode *zserio.PackingCo
   if !ok {
     return errors.New("unsupported packing context type")
   }
-  context.Init(&{{- template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "native" $native }}, {{ goType $scope $native.Type }}(*v))
+  context.Init(&{{- template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "type" $native.Type }}, {{ goType $scope $native.Type }}(*v))
   return nil
 }
 
@@ -96,7 +96,7 @@ func (v *{{ $enum.Name}}) UnmarshalZserioPacked(contextNode *zserio.PackingConte
   if !ok {
     return errors.New("unsupported packing context type")
   }
-  if tempValue, err := context.Read(&{{- template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "native" $native }}, r); err != nil {
+  if tempValue, err := context.Read(&{{- template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "type" $native.Type }}, r); err != nil {
     return err
   } else {
     (*v) = {{ $enum.Name }}(tempValue)
@@ -109,7 +109,7 @@ func (v *{{ $enum.Name}}) MarshalZserioPacked(contextNode *zserio.PackingContext
   if !ok {
     return errors.New("unsupported packing context type")
   }
-  return context.Write(&{{- template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "native" $native }}, w, {{ goType $scope $native.Type }}(*v))
+  return context.Write(&{{- template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "type" $native.Type }}, w, {{ goType $scope $native.Type }}(*v))
 }
 
 func (v *{{ $enum.Name}}) ZserioInitializeOffsetsPacked(contextNode *zserio.PackingContextNode, bitPosition int) int {
