--- a/internal/generator/templates/packing_context_decode.go.tmpl
+++ b/internal/generator/templates/packing_context_decode.go.tmpl
@@ -87,7 +87,8 @@
         if field{{ $field.Name }}Context, ok := childrenNodes[{{ $index }}].Context.(*ztype.DeltaContext[{{ goType $scope $native.Type }}]); !ok {
             return errors.New("unknown context type")
         } else {
-            if tempValue, err := field{{ $field.Name }}Context.Read(&{{ template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "type" $native.Type }}, r); err == nil {
+            traits := {{ template "instantiate_array_traits.go.tmpl" dict "pkg" $scope "type" $native.Type }}
+            if tempValue, err := field{{ $field.Name }}Context.Read(&traits, r); err == nil {
                 {{ $assign_str_lvalue }} = ({{ goType $scope $field.Type }})(tempValue)
             } else {
                 return err
